fixed an issue where my sidemenu was showing on mobile devices when it shouldnt have been there

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ body{
 #main{
     width: 100vw;
     min-height: 100vh;
+    margin-left: 0;
 }
 
 a{
@@ -68,7 +69,7 @@ a:hover{
 // SideMenu Styles
 
 #sidemenu{
-    display: none;
+    display:none;
     flex-direction: column;
     min-width: $sidemenu-width;
     a:hover{
@@ -171,8 +172,11 @@ a:hover{
 .float-bottom{
     position: absolute;
     bottom: 0;
-    width: 100%; 
-    color: white;
+    width: 100%;
+    a{
+        color: white;
+    } 
+    
 }
 
 .container{
@@ -263,7 +267,7 @@ a:hover{
 
 //Breakpoints
 
-@media (min-width: 576px){
+@media only screen and (min-width: 576px){
 
     .container{
         width: 530px;
@@ -284,15 +288,21 @@ a:hover{
         height: 150px;
     }
 
+    
+
 }
 
-@media (min-width: 768px){
+@media only screen and (min-width: 768px){
     .container{
-        width:calc(718px - #{$sidemenu-width});
+        width: 718px;
     }
 
     .project-card{
-        width: calc((718px - #{$sidemenu-width}) / 2 - 20px);
+        width: calc(718px / 2 - 20px);
+    }
+
+    .project-thumbnail{ 
+        height: 230px;
     }
 
     .contact-info-section{
@@ -314,26 +324,10 @@ a:hover{
         height: 215px;
     }
 
-    .mobile-menu-button{
-        display: none;
-    }
-
-    #sidemenu{
-        display:flex;
-    }
+    
 
     .hero-banner{
         width: auto;
-    }
-
-    #main{
-        border-left: 3px solid $accent-colour;
-        width: calc(100vw - #{$sidemenu-width});
-        margin-left: $sidemenu-width;
-    }
-
-    .b2t-btn{
-        //left: calc((100% + #{$sidemenu-width}) / 2 - 46px);
     }
 
     .about-me-img{
@@ -341,8 +335,22 @@ a:hover{
     }
 }
 
-@media (min-width: 992px){
+@media only screen and (min-width: 992px){
     //increase container width further
+
+    #main{
+        border-left: 3px solid $accent-colour;
+        width: calc(100vw - #{$sidemenu-width});
+        margin-left: $sidemenu-width;
+    }
+
+    #sidemenu{
+        display: flex;
+    }
+
+    .mobile-menu-button{
+        display: none;
+    }
 
     .container{
         width:calc(942px - #{$sidemenu-width});
@@ -351,14 +359,12 @@ a:hover{
     //homepage styles
 
     .project-card{
-        width: calc((942px - #{$sidemenu-width}) / 2 - 20px);
-        
+        width: calc((942px - #{$sidemenu-width}) / 2 - 20px);  
     }
 
     .project-thumbnail{
         height: 230px;
     }
-    
     
     //about me styles
 
@@ -368,7 +374,7 @@ a:hover{
     }
 }
 
-@media (min-width: 1200px){
+@media only screen and (min-width: 1200px){
     //increase container width again
 
     .container{
